<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="c_FB_MotionReferenceGenerat" Id="{86409cbb-c3c5-4a9f-b6c1-559c8f795e5f}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK c_FB_MotionReferenceGenerat
VAR_INPUT
	fStartPosition_m: LREAL;
	fStartVelocity_m: LREAL;
	fPositionSetpoint_ms: LREAL;
	fVelocitySetpoint_m: LREAL;
	fTimeBeforeStarting_s: LREAL;
	fRampTime_s: LREAL;
	fHoldPositionTime_s: LREAL;
	fClock_s: LREAL;
END_VAR
VAR_OUTPUT
	fPositionReference_m: LREAL;
	fVelocityReference_ms: LREAL;
	fTotalMotionTime_s: LREAL;
	fErrorSignal: LREAL;
END_VAR
VAR
	Error: DINT;
	slopeExt: LREAL;
	slopeRetr: LREAL;
	tHold: LREAL;
	x1: LREAL;
	x4: LREAL;
	x1_tmp: LREAL;
	x1_tmp_tmp: LREAL;
	x4_tmp: LREAL;
	x4_tmp_tmp: LREAL;
	x4_tmp_tmp_0: LREAL;
	x1_tmp_0: LREAL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
(* Outputs for Atomic SubSystem: '<Root>/FB_MotionReferenceGenerator_nolimit' *)
(* MATLAB Function: '<S1>/WaveSignal' *)
(* MATLAB Function 'FB_MotionReferenceGenerator_nolimit/WaveSignal': '<S2>:1' *)
(* '<S2>:1:2' x_SP = x_ref - x0; *)
(* '<S2>:1:3' vs=v_ref; *)
(* '<S2>:1:4' slopeExt=v0-vs; *)
slopeExt := fStartVelocity_m - fVelocitySetpoint_m;
(* '<S2>:1:5' slopeRetr=-vs-v0; *)
slopeRetr := ( -fVelocitySetpoint_m) - fStartVelocity_m;
(* '<S2>:1:7' as = vs/tRamp; *)
(* '<S2>:1:8' s_acc=(vs^2-v0^2)/as; *)
(* '<S2>:1:10' tHold=(x_SP-s_acc)/vs; *)
tHold := ((fPositionSetpoint_ms - fStartPosition_m) - (((fVelocitySetpoint_m * fVelocitySetpoint_m) - (fStartVelocity_m * fStartVelocity_m)) / (fVelocitySetpoint_m / fRampTime_s))) / fVelocitySetpoint_m;
(* '<S2>:1:12' if tHold < 0 *)

IF tHold < 0.0 THEN 
    (* '<S2>:1:13' Error = 1; *)
    Error := 1;
ELSE 
    (* '<S2>:1:14' else *)
    (* '<S2>:1:15' Error = 0; *)
    Error := 0;
END_IF;

(* '<S2>:1:18' t1=tRamp; *)
(* '<S2>:1:19' t2=tHold; *)
(* '<S2>:1:20' t3=tRamp; *)
(* '<S2>:1:21' t4=tWait; *)
(* '<S2>:1:22' t5=t1; *)
(* '<S2>:1:23' t6=t2; *)
(* '<S2>:1:24' t7=t3; *)
(* '<S2>:1:26' x = x0; *)
(* '<S2>:1:27' x1 = x0 + v0*((t0+t1)-t0)-(slopeExt/t1)*((t0+t1)-t0)^2/2; *)
x1_tmp_tmp := fTimeBeforeStarting_s + fRampTime_s;
x1_tmp := x1_tmp_tmp - fTimeBeforeStarting_s;
x1_tmp_0 := slopeExt / fRampTime_s;
x1 := ((x1_tmp * fStartVelocity_m) + fStartPosition_m) - ((x1_tmp_0 * (x1_tmp * x1_tmp)) / 2.0);
(* '<S2>:1:28' x2 = x1 + vs*((t0+t1+t2)-(t0+t1)); *)
(* '<S2>:1:29' x4 = x_ref - v0*((t0+t1+t2+t3+t4+t5)-(t0+t1+t2+t3+t4))+(slopeRetr/t5)*((t0+t1+t2+t3+t4+t5)-(t0+t1+t2+t3+t4))^2/2; *)
x4_tmp_tmp := x1_tmp_tmp + tHold;
x4_tmp_tmp_0 := x4_tmp_tmp + fRampTime_s;
x4_tmp := x4_tmp_tmp_0 + fHoldPositionTime_s;
x1_tmp := x4_tmp + fRampTime_s;
x4 := x1_tmp - x4_tmp;
x4 := (fPositionSetpoint_ms - (x4 * fStartVelocity_m)) + (((slopeRetr / fRampTime_s) * (x4 * x4)) / 2.0);
(* '<S2>:1:30' x5 = x4-vs*((t0+t1+t2+t3+t4+t5+t6)-(t0+t1+t2+t3+t4+t5)); *)
(* '<S2>:1:32' if Error == 1 *)

IF Error = 1 THEN 
    (* Outport: '<Root>/fPositionReference_m' *)
    (* '<S2>:1:33' x = x0; *)
    fPositionReference_m := fStartPosition_m;
    (* Outport: '<Root>/fVelocityReference_ms' *)
    (* '<S2>:1:34' v = v0; *)
    fVelocityReference_ms := fStartVelocity_m;
ELSIF (fClock_s >= 0.0) AND (fClock_s < fTimeBeforeStarting_s) THEN 
    (* Outport: '<Root>/fPositionReference_m' *)
    (* '<S2>:1:35' elseif t>=0 && t<t0 *)
    (* '<S2>:1:36' x = x0; *)
    fPositionReference_m := fStartPosition_m;
    (* Outport: '<Root>/fVelocityReference_ms' *)
    (* '<S2>:1:37' v = v0; *)
    fVelocityReference_ms := fStartVelocity_m;
ELSIF (fClock_s >= fTimeBeforeStarting_s) AND (fClock_s < x1_tmp_tmp) THEN 
    (* '<S2>:1:38' elseif t>=t0 && t<(t0+t1) *)
    (* '<S2>:1:39' x = x0 + v0*(t-t0)-(slopeExt/t1)*(t-t0)^2/2; *)
    slopeRetr := fClock_s - fTimeBeforeStarting_s;
    (* Outport: '<Root>/fPositionReference_m' *)
    fPositionReference_m := ((slopeRetr * fStartVelocity_m) + fStartPosition_m) - ((x1_tmp_0 * (slopeRetr * slopeRetr)) / 2.0);
    (* Outport: '<Root>/fVelocityReference_ms' *)
    (* '<S2>:1:40' v = v0-(slopeExt/t1)*(t-t0); *)
    fVelocityReference_ms := fStartVelocity_m - (x1_tmp_0 * slopeRetr);
ELSIF (fClock_s >= x1_tmp_tmp) AND (fClock_s < x4_tmp_tmp) THEN 
    (* Outport: '<Root>/fPositionReference_m' *)
    (* '<S2>:1:41' elseif t>=(t0+t1) && t<(t0+t1+t2) *)
    (* '<S2>:1:42' x = x1 + vs*(t-(t0+t1)); *)
    fPositionReference_m := ((fClock_s - x1_tmp_tmp) * fVelocitySetpoint_m) + x1;
    (* Outport: '<Root>/fVelocityReference_ms' *)
    (* '<S2>:1:43' v = vs; *)
    fVelocityReference_ms := fVelocitySetpoint_m;
ELSIF (fClock_s >= x4_tmp_tmp) AND (fClock_s < x4_tmp_tmp_0) THEN 
    (* '<S2>:1:44' elseif t>=(t0+t1+t2) && t<(t0+t1+t2+t3) *)
    (* '<S2>:1:45' x = x2+vs*(t-(t0+t1+t2))+(slopeExt/t3)*(t-(t0+t1+t2))^2/2; *)
    slopeRetr := fClock_s - x4_tmp_tmp;
    (* Outport: '<Root>/fPositionReference_m' *)
    fPositionReference_m := ((((x4_tmp_tmp - x1_tmp_tmp) * fVelocitySetpoint_m) + x1) + (slopeRetr * fVelocitySetpoint_m)) + ((x1_tmp_0 * (slopeRetr * slopeRetr)) / 2.0);
    (* Outport: '<Root>/fVelocityReference_ms' *)
    (* '<S2>:1:46' v = vs+(slopeExt/t3)*(t-(t0+t1+t2)); *)
    fVelocityReference_ms := (slopeRetr * (slopeExt / fRampTime_s)) + fVelocitySetpoint_m;
ELSIF (fClock_s >= x4_tmp_tmp_0) AND (fClock_s < x4_tmp) THEN 
    (* Outport: '<Root>/fPositionReference_m' *)
    (* '<S2>:1:47' elseif t>=(t0+t1+t2+t3) && t<(t0+t1+t2+t3+t4) *)
    (* '<S2>:1:48' x = x_ref; *)
    fPositionReference_m := fPositionSetpoint_ms;
    (* Outport: '<Root>/fVelocityReference_ms' *)
    (* '<S2>:1:49' v = v0; *)
    fVelocityReference_ms := fStartVelocity_m;
ELSIF (fClock_s >= x4_tmp) AND (fClock_s < x1_tmp) THEN 
    (* '<S2>:1:50' elseif t>=(t0+t1+t2+t3+t4) && t<(t0+t1+t2+t3+t4+t5) *)
    (* '<S2>:1:51' x = x_ref - v0*(t-(t0+t1+t2+t3+t4))+(slopeRetr/t5)*(t-(t0+t1+t2+t3+t4))^2/2; *)
    slopeExt := fClock_s - x4_tmp;
    slopeRetr := slopeRetr / fRampTime_s;
    (* Outport: '<Root>/fPositionReference_m' *)
    fPositionReference_m := (fPositionSetpoint_ms - (slopeExt * fStartVelocity_m)) + ((slopeRetr * (slopeExt * slopeExt)) / 2.0);
    (* Outport: '<Root>/fVelocityReference_ms' *)
    (* '<S2>:1:52' v = v0+(slopeRetr/t5)*(t-(t0+t1+t2+t3+t4)); *)
    fVelocityReference_ms := (slopeExt * slopeRetr) + fStartVelocity_m;
ELSE 
    x1_tmp_0 := x1_tmp + tHold;

    IF (fClock_s >= x1_tmp) AND (fClock_s < x1_tmp_0) THEN 
        (* Outport: '<Root>/fPositionReference_m' *)
        (* '<S2>:1:53' elseif t>=(t0+t1+t2+t3+t4+t5) && t<(t0+t1+t2+t3+t4+t5+t6) *)
        (* '<S2>:1:54' x = x4-vs*(t-(t0+t1+t2+t3+t4+t5)); *)
        fPositionReference_m := x4 - ((fClock_s - x1_tmp) * fVelocitySetpoint_m);
        (* Outport: '<Root>/fVelocityReference_ms' *)
        (* '<S2>:1:55' v = -vs; *)
        fVelocityReference_ms :=  -fVelocitySetpoint_m;
    ELSIF (fClock_s >= x1_tmp_0) AND (fClock_s < (((((((fTimeBeforeStarting_s + fRampTime_s) + tHold) + fRampTime_s) + fHoldPositionTime_s) + fRampTime_s) + tHold) + fRampTime_s)) THEN 
        (* '<S2>:1:56' elseif t>=(t0+t1+t2+t3+t4+t5+t6) && t<(t0+t1+t2+t3+t4+t5+t6+t7) *)
        (* '<S2>:1:57' x = x5-vs*(t-(t0+t1+t2+t3+t4+t5+t6))-(slopeRetr/t3)*(t-(t0+t1+t2+t3+t4+t5+t6))^2/2; *)
        slopeExt := fClock_s - x1_tmp_0;
        slopeRetr := slopeRetr / fRampTime_s;
        (* Outport: '<Root>/fPositionReference_m' *)
        fPositionReference_m := ((x4 - ((x1_tmp_0 - x1_tmp) * fVelocitySetpoint_m)) - (slopeExt * fVelocitySetpoint_m)) - ((slopeRetr * (slopeExt * slopeExt)) / 2.0);
        (* Outport: '<Root>/fVelocityReference_ms' *)
        (* '<S2>:1:58' v = -vs-(slopeRetr/t3)*(t-(t0+t1+t2+t3+t4+t5+t6)); *)
        fVelocityReference_ms := ( -fVelocitySetpoint_m) - (slopeExt * slopeRetr);
    ELSE 
        (* Outport: '<Root>/fPositionReference_m' *)
        (* '<S2>:1:59' else *)
        (* '<S2>:1:60' x = x0; *)
        fPositionReference_m := fStartPosition_m;
        (* Outport: '<Root>/fVelocityReference_ms' *)
        (* '<S2>:1:61' v = v0; *)
        fVelocityReference_ms := fStartVelocity_m;
    END_IF;

END_IF;

(* Outport: '<Root>/fTotalMotionTime_s' incorporates:
 *  MATLAB Function: '<S1>/WaveSignal' *)
(* '<S2>:1:64' T = t0+t1+t2+t3+t4+t5+t6+t7; *)
fTotalMotionTime_s := ((((((fTimeBeforeStarting_s + fRampTime_s) + tHold) + fRampTime_s) + fHoldPositionTime_s) + fRampTime_s) + tHold) + fRampTime_s;
(* Outport: '<Root>/fErrorSignal' incorporates:
 *  MATLAB Function: '<S1>/WaveSignal' *)
fErrorSignal := DINT_TO_LREAL(Error);
(* End of Outputs for SubSystem: '<Root>/FB_MotionReferenceGenerator_nolimit' *)

]]></ST>
    </Implementation>
    <LineIds Name="c_FB_MotionReferenceGenerat">
      <LineId Id="3" Count="149" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>